--- a/package.json
+++ b/package.json
@@ -6,9 +6,24 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "cogo-toast": "^4.2.3",
+    "moment": "^2.29.4",
+    "native-base": "^3.4.21",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-interval": "^2.1.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "^0.17.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.2.1",
+    "react-spinners": "^0.13.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
